# enforcer

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE.txt  README.md  appveyor.yml  rakefile.rb  todo.mkd
.github/workflows/: build.yml  ci.yml  pull_request_check.yml  release.yml
samples/: .enforcer  .enforcer_broken  .enforcer_old  emptyFile.h  hasForbiddenCharacters.cpp  hasTrailingSpaces.cpp  mixedTabsAndSpaces.cpp  mixedTabsAndSpaces2.cpp  simpleWithEmptyLine.cpp  withTabsAndTrailingWhitespaces.cpp
samples/corrected/: mixedTabsAndSpaces.cpp  mixedTabsAndSpaces_tabs.cpp  onlySpaces.cpp  onlyTabs.cpp  simple.cpp  simpleWithEmptyLine.cpp
src/: app.rs  args.rs  check.rs  clean.rs  config.rs  lib.rs  main.rs  search.rs  tmp.txt
test/: convertTabs.rb  withTabs.cpp
