[package]
name = "enforcer"
version = "0.7.0"
authors = ["Oliver Mueller <oliver.mueller@gmail.com>"]

[dependencies]
glob = "*"
docopt = "0.6"
rustc-serialize = "0.3"
log = "0.3"
env_logger = "0.3"
toml = "0.1"
regex = "*"
memmap = "0.3"
scoped-pool = "*"
walkdir = "0.1.*"
pbr = "0.1.*"
ansi_term = "0.7"
