[package]
name = "enforcer"
version = "0.14.3"
authors = ["Oliver Mueller <oliver.mueller@gmail.com>"]

[dependencies]
clap = "2"
rustc-serialize = "0.3"
log = "0.3"
env_logger = "0.3"
toml = "0.1"
scoped-pool = "*"
walkdir = "1"
pbr = "1.0.0-alpha.3"
term-painter = "0.2"
ansi_term = "0.7"
glob = "0.2"
num_cpus = "1"
regex = "0.2"
unic-char-range = "0.9.0"
