[package]
name = "enforcer"
version = "0.14.3"
authors = ["Oliver Mueller <oliver.mueller@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.28"
ansi_term = "0.12"
clap = "2.33.0"
chrono = "0.4"
env_logger = "0.7.1"
glob = "0.3.0"
log = "0.4.8"
num_cpus = "1.13.0"
pbr = "1.0.2"
regex = "1.3.7"
scoped-pool = "1.0.0"
serde_derive = "1.0.106"
serde = "1.0.106"
term-painter = "0.2.4"
toml = "0.5.6"
unic-char-range = "0.9.0"
walkdir = "2.3.1"
